Fix spacing with link underline

--- a/src/components/Link.css
+++ b/src/components/Link.css
@@ -13,7 +13,7 @@
   content: '';
   position: absolute;
   width: 0;
-  left: 0;
+  left: -2px;
   bottom: -2px;
 
   border: 2px solid #000;
